changes in lab1

--- a/index.html
+++ b/index.html
@@ -1,78 +1,113 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <title>Web Studio</title>
 </head>
 <body>
 <header>
-    <a href="#"> <img src="images/logo.png" style="width:145px;height:31px;" alt="logo"> </a>
+    <a href="#"> <img src="images/logo.png" width="145" height="31" alt="logo"> </a>
     <nav>
         <ul>
-            <li href="#"> Студія</li>
-            <li href='#'> Портфоліо</li>
-            <li href='#'> Контакти</li>
+            <li>
+                <a href="">Студія</a>
+            </li>
+            <li>
+                <a href='#'> Портфоліо</a>
+            </li>
+            <li>
+                <a href='#'> Контакти</a>
+            </li>
         </ul>
     </nav>
+
     <ul>
-        <li> info@devstudio.com <br></li>
-        <li> +38 096 111 11 11</li>
+        <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
     </ul>
 </header>
-<br>
+
 <main>
     <section>
         <h1> Ефективні рішення для вашого бізнесу </h1>
         <button type="button"> Замовити послугу</button>
     </section>
-    <br>
+
     <section>
         <ul>
-            <h3> УВАГА ДО ДЕТАЛЕЙ </h3>
-            <li> Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</li>
-            <h3> ПУНКТУАЛЬНІСТЬ </h3>
-            <li> Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</li>
-            <h3> ПЛАНУВАННЯ </h3>
-            <li> Так само консультація з широким активом значною мірою зумовлює.</li>
-            <h3> СУЧАСНІ ТЕХНОЛОГІЇ </h3>
-            <li> Значимість цих проблем настільки очевидна, що реалізація планових завдань.</li>
+            <li>
+                <h3>УВАГА ДО ДЕТАЛЕЙ </h3>
+                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            </li>
+            <li>
+                <h3> ПУНКТУАЛЬНІСТЬ </h3>
+                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            </li>
+            <li>
+                <h3> ПЛАНУВАННЯ </h3>
+                <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            </li>
+            <li>
+                <h3> СУЧАСНІ ТЕХНОЛОГІЇ </h3>
+                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            </li>
         </ul>
     </section>
-    <br>
     <section>
-        <h2> Чим ми займаємося </h2>
-        <img src="images/whatwedo1.png" style="width:370px;height:294px">
-        <img src="images/whatwedo2.png" style="width:370px;height:294px">
-        <img src="images/whatwedo3.png" style="width:370px;height:294px">
+        <ul>
+            <li>
+                <h2> Чим ми займаємося </h2>
+            </li>
+            <li>
+                <img src="images/whatwedo1.png" width = "370" height = "294" alt="whatwedo1">
+            </li>
+            <li>
+                <img src="images/whatwedo2.png" width = "370" height = "294" alt="whatwedo1">
+            </li>
+            <li>
+                <img src="images/whatwedo3.png" width = "370" height = "294" alt="whatwedo1">
+            </li>
+        </ul>
+
     </section>
-    <br>
     <section>
         <h2> Наша команда </h2>
-        <img src="images/Ighor.png" style="width:270px; height:260px" alt="Product Designer">
-        <p> Ігор Дем'яненко </p>
-        <p> Product Designer </p>
-        <img src="images/olga.png" style="width:270px; height:260px" alt="Frontend Developer">
-        <p> Ольга Рєпіна </p>
-        <p> Frontend Developer </p>
-        <img src="images/mukola.png" style="width:270px; height:260px" alt="Marketing">
-        <p> Микола Тарасов </p>
-        <p> Marketing </p>
-        <img src="images/muhaylo.png" style="width:270px; height:260px" alt="UI Designer">
-        <p> Михайло Єрмаков </p>
-        <p> UI Designer </p>
+        <ul>
+            <li>
+                <img src="images/Ighor.png" width="270" height="260" alt="Product Designer">
+                <p> Ігор Дем'яненко </p>
+                <p> Product Designer </p>
+            </li>
+            <li>
+                <img src="images/olga.png" width="270" height="260" alt="Frontend Developer">
+                <p> Ольга Рєпіна </p>
+                <p> Frontend Developer </p>
+            </li>
+            <li>
+                <img src="images/mukola.png" width="270" height="260" alt="Marketing">
+                <p> Микола Тарасов </p>
+                <p> Marketing </p>
+            </li>
+            <li>
+                <img src="images/muhaylo.png" width="270" height="260" alt="UI Designer">
+                <p> Михайло Єрмаков </p>
+                <p> UI Designer </p>
+            </li>
+        </ul>
     </section>
 </main>
-
-<br>
-
 <footer>
-    <a href="#"> <img src="images/logo.png" style="width:145px;height:31px;" alt="logo"> </a>
-
-    <ul>
-        <li> м. Київ, пр-т Лесі Українки, 26</li>
-        <li> info@devstudio.com</li>
-        <li> +38 096 111 11 11</li>
-    </ul>
+    <a href="#"> <img src="images/WebStudio.jpg" width = "145" height = "31" alt="logo2"> </a>
+    <address>
+        м. Київ
+        Проспект Лесі Українки, 26
+    </address>
+    <a href="tel:+380961111111">+38 096 111 11 11</a>
+    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
 </footer>
 
 </body>
