--- a/index.html
+++ b/index.html
@@ -3,25 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-<header>
-    <a href="#"> <img src="images/logo.png" width="145" height="31" alt="logo"> </a>
+<body class="body">
+<header class="header">
+    <a href="index.html" class="header-logo"> Web<span>Studio</span> </a>
     <nav>
-        <ul>
-            <li>
-                <a href="">Студія</a>
+        <ul class="link-list">
+            <li class="link-element">
+                <a href="index.html">Студія</a>
             </li>
-            <li>
-                <a href='#'> Портфоліо</a>
+            <li class="link-element">
+                <a href='portfolio.html'> Портфоліо</a>
             </li>
-            <li>
+            <li class="link-element">
                 <a href='#'> Контакти</a>
             </li>
         </ul>
     </nav>
 
-    <ul>
+    <ul class="contact-info">
         <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
@@ -31,84 +36,82 @@
     </ul>
 </header>
 
-<main>
-    <section>
-        <h1> Ефективні рішення для вашого бізнесу </h1>
-        <button type="button"> Замовити послугу</button>
+<main class="main-business">
+    <section class="hero">
+        <h1 class="business-section-title"> Ефективні рішення для вашого бізнесу </h1>
+        <button type="button" class="business-section-button"> Замовити послугу</button>
     </section>
 
-    <section>
-        <ul>
-            <li>
-                <h3>УВАГА ДО ДЕТАЛЕЙ </h3>
-                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+    <section class="detail">
+        <ul class="detail-list">
+            <li class="detail-list-element">
+                <h3 class="detail-list-title">УВАГА ДО ДЕТАЛЕЙ </h3>
+                <p class="detail-list-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
-            <li>
-                <h3> ПУНКТУАЛЬНІСТЬ </h3>
-                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <li class="detail-list-element">
+                <h3 class="detail-list-title"> ПУНКТУАЛЬНІСТЬ </h3>
+                <p class="detail-list-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
-            <li>
-                <h3> ПЛАНУВАННЯ </h3>
-                <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <li class="detail-list-element">
+                <h3 class="detail-list-title"> ПЛАНУВАННЯ </h3>
+                <p class="detail-list-text">Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
-            <li>
-                <h3> СУЧАСНІ ТЕХНОЛОГІЇ </h3>
-                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <li class="detail-list-element">
+                <h3 class="detail-list-title"> СУЧАСНІ ТЕХНОЛОГІЇ </h3>
+                <p class="detail-list-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
         </ul>
     </section>
-    <section>
-        <ul>
-            <li>
-                <h2> Чим ми займаємося </h2>
+    <section class="work">
+        <h2 class="work-title"> Чим ми займаємося </h2>
+        <ul class="work-list">
+            <li class="work-list-element">
+                <img class="work-list-img" src="images/whatwedo1.png" width="370" height="294" alt="Десктопні-додатки">
             </li>
-            <li>
-                <img src="images/whatwedo1.png" width = "370" height = "294" alt="whatwedo1">
+            <li class="work-list-element">
+                <img class="work-list-img" src="images/whatwedo2.png" width="370" height="294" alt="Мобільні-додатки">
             </li>
-            <li>
-                <img src="images/whatwedo2.png" width = "370" height = "294" alt="whatwedo1">
-            </li>
-            <li>
-                <img src="images/whatwedo3.png" width = "370" height = "294" alt="whatwedo1">
+            <li class="work-list-element">
+                <img class="work-list-img" src="images/whatwedo3.png" width="370" height="294" alt="Дизайнерські-рішення">
             </li>
         </ul>
 
     </section>
-    <section>
-        <h2> Наша команда </h2>
-        <ul>
-            <li>
-                <img src="images/Ighor.png" width="270" height="260" alt="Product Designer">
-                <p> Ігор Дем'яненко </p>
-                <p> Product Designer </p>
+    <section class="team">
+        <h2 class="team-title"> Наша команда </h2>
+        <ul class="team-list">
+            <li class="members">
+                <img class="member-img" src="images/Ighor.png" width="270" height="260" alt="Дизайнер-Ігор">
+                <h3 class="member-title"> Ігор Дем'яненко </h3>
+                <p class="member-text"> Product Designer </p>
             </li>
-            <li>
-                <img src="images/olga.png" width="270" height="260" alt="Frontend Developer">
-                <p> Ольга Рєпіна </p>
-                <p> Frontend Developer </p>
+            <li class="members">
+                <img class="member-img" src="images/olga.png" width="270" height="260" alt="Розробниця-Ольга">
+                <h3 class="member-title"> Ольга Рєпіна </h3>
+                <p class="member-text"> Frontend Developer </p>
             </li>
-            <li>
-                <img src="images/mukola.png" width="270" height="260" alt="Marketing">
-                <p> Микола Тарасов </p>
-                <p> Marketing </p>
+            <li class="members">
+                <img class="member-img" src="images/mukola.png" width="270" height="260" alt="Маркетинг-Микола">
+                <h3 class="member-title"> Микола Тарасов </h3>
+                <p class="member-text"> Marketing </p>
             </li>
-            <li>
-                <img src="images/muhaylo.png" width="270" height="260" alt="UI Designer">
-                <p> Михайло Єрмаков </p>
-                <p> UI Designer </p>
+            <li class="members">
+                <img class="member-img" src="images/muhaylo.png" width="270" height="260" alt="Дизайнер-Михайло">
+                <h3 class="member-title"> Михайло Єрмаков </h3>
+                <p class="member-text"> UI Designer </p>
             </li>
         </ul>
     </section>
 </main>
-<footer>
-    <a href="#"> <img src="images/WebStudio.jpg" width = "145" height = "31" alt="logo2"> </a>
+<footer class="footer">
+    <a href="index.html" class="footer-logo"> Web<span>Studio</span> </a>
     <address>
-        м. Київ
-        Проспект Лесі Українки, 26
+        <p class="address"> м. Київ, пр-т Лесі Українки, 26 </p>
+        <ul>
+            <li class="contact-info-footer"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="contact-info-footer"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
     </address>
-    <a href="tel:+380961111111">+38 096 111 11 11</a>
-    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
 </footer>
-
 </body>
 </html>
