--- a/portfolio.html
+++ b/portfolio.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="uk" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Портфоліо</title>
+    <link rel="stylesheet" href="css/modern-normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 <header class="header">
+    <div class="container">
     <a href="index.html" class="header-logo"> Web<span>Studio</span> </a>
     <nav>
         <ul class="link-list">
@@ -35,10 +37,12 @@
             <a href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
     </ul>
+    </div>
 </header>
 
 <main>
     <section>
+        <div class="container">
     <ul class="button_list">
         <li class="button_list_element">
             <button type="button" class="button_list_item"> Усі</button>
@@ -59,55 +63,93 @@
 
         <ul class="project-list">
             <li class="project-list-element">
+                <a href="#">
                 <img class="project-list-img" src="images/technocrack.jpg" width="370" height="294" alt="Технокряк">
+                <div class="project-list-element-text">
                 <h3 class="project-list-title"> Технокряк </h3>
                 <p class="project-list-text"> Веб-сайт </p>
+                </div>
+                </a>
             </li>
             <li class="project-list-element">
+                <a href="#">
                 <img class="project-list-img" src="images/poster.jpg" width="370" height="294" alt="Постер-New-Orlean-vs-Golden-Star">
+                <div class="project-list-element-text">
                 <h3 class="project-list-title"> Постер New Orlean vs Golden Star </h3>
                 <p class="project-list-text"> Дизайн </p>
+                </div>
+                </a>
             </li>
             <li class="project-list-element">
+                <a href="#">
                 <img class="project-list-img" src="images/seafood.jpg" width="370" height="294" alt="Ресторан-Seafood">
+                <div class="project-list-element-text">
                 <h3 class="project-list-title"> Ресторан Seafood </h3>
                 <p class="project-list-text"> Додаток </p>
+                </div>
+                </a>
             </li>
             <li class="project-list-element">
+                <a href="#">
                 <img class="project-list-img" src="images/prime.jpg" width="370" height="294" alt="Проєкт-Prime">
+                <div class="project-list-element-text">
                 <h3 class="project-list-title"> Проєкт Prime </h3>
                 <p class="project-list-text"> Маркетинг </p>
+                </div>
+                </a>
             </li>
             <li class="project-list-element">
+                <a href="#">
                 <img class="project-list-img" src="images/boxes.jpg" width="370" height="294" alt="Проєкт-Boxes" >
+                <div class="project-list-element-text">
                 <h3 class="project-list-title"> Проєкт Boxes </h3>
                 <p class="project-list-text"> Додаток </p>
+                </div>
+                </a>
             </li>
             <li class="project-list-element">
+                <a href="#">
                 <img class="project-list-img" src="images/inspiration.jpg" width="370" height="294" alt="Inspiration-has-no-Borders">
+                <div class="project-list-element-text">
                 <h3 class="project-list-title"> Inspiration has no Borders </h3>
                 <p class="project-list-text"> Веб-сайт </p>
+                </div>
+                </a>
             </li>
             <li class="project-list-element">
+                <a href="#">
                 <img class="project-list-img" src="images/publishing.jpg" width="370" height="294" alt="Видання-Limited-Edition">
+                <div class="project-list-element-text">
                 <h3 class="project-list-title"> Видання Limited Edition </h3>
                 <p class="project-list-text"> Дизайн </p>
+                </div>
+                </a>
             </li>
             <li class="project-list-element">
+                <a href="#">
                 <img class="project-list-img" src="images/lab.jpg" width="370" height="294" alt="Проєкт-LAB">
+                <div class="project-list-element-text">
                 <h3 class="project-list-title"> Проєкт LAB </h3>
                 <p class="project-list-text"> Маркетинг </p>
+                </div>
+                </a>
             </li>
             <li class="project-list-element">
+                <a href="#">
                 <img class="project-list-img" src="images/growing.jpg" width="370" height="294" alt="Growing-Business">
+                <div class="project-list-element-text">
                 <h3 class="project-list-title"> Growing Business </h3>
                 <p class="project-list-text"> Додаток </p>
+                </div>
+                </a>
             </li>
         </ul>
+        </div>
     </section>
 </main>
 
 <footer class="footer">
+    <div class="container">
     <a href="index.html" class="footer-logo"> Web<span>Studio</span> </a>
     <address>
         <p class="address"> м. Київ, пр-т Лесі Українки, 26 </p>
@@ -116,6 +158,7 @@
             <li class="contact-info-footer"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </address>
+    </div>
 </footer>
 </body>
 </html>
