--- a/portfolio.html
+++ b/portfolio.html
@@ -14,150 +14,202 @@
 <body>
 <header class="header">
     <div class="container">
-    <a href="index.html" class="header-logo"> Web<span>Studio</span> </a>
-    <nav>
-        <ul class="link-list">
-            <li class="link-element">
-                <a href="index.html">Студія</a>
+        <a href="index.html" class="header-logo"> Web<span>Studio</span> </a>
+
+        <nav>
+            <ul class="link-list">
+                <li class="link-element">
+                    <a href="index.html">Студія</a>
+                </li>
+                <li class="link-element">
+                    <a href='portfolio.html'> Портфоліо</a>
+                </li>
+                <li class="link-element">
+                    <a href='#'> Контакти</a>
+                </li>
+            </ul>
+        </nav>
+
+        <ul class="contact-info">
+            <li>
+                <a class="header_contacts_link" href="mailto:info@devstudio.com">
+                    <svg class="header-icon" width="16" height="12">
+                        <use href="./images/svg/icons.svg#icon-envelope"></use>
+                    </svg>
+                    info@devstudio.com</a>
             </li>
-            <li class="link-element">
-                <a href='portfolio.html'> Портфоліо</a>
-            </li>
-            <li class="link-element">
-                <a href='#'> Контакти</a>
+            <li>
+                <a class="header_contacts_link" href="tel:+380961111111">
+                    <svg class="header-icon" width="10" height="16">
+                        <use href="./images/svg/icons.svg#icon-smartphone"></use>
+                    </svg>
+                    +38 096 111 11 11</a>
             </li>
         </ul>
-    </nav>
-
-    <ul class="contact-info">
-        <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-    </ul>
     </div>
 </header>
 
 <main>
     <section>
         <div class="container">
-    <ul class="button_list">
-        <li class="button_list_element">
-            <button type="button" class="button_list_item"> Усі</button>
-        </li>
-        <li class="button_list_element">
-            <button type="button" class="button_list_item"> Веб-сайти</button>
-        </li>
-        <li class="button_list_element">
-            <button type="button" class="button_list_item"> Додатки</button>
-        </li>
-        <li class="button_list_element">
-            <button type="button" class="button_list_item"> Дизайн</button>
-        </li>
-        <li class="button_list_element">
-            <button type="button" class="button_list_item"> Маркетинг</button>
-        </li>
-    </ul>
+            <ul class="button_list">
+                <li class="button_list_element">
+                    <button type="button" class="button_list_item"> Усі</button>
+                </li>
+                <li class="button_list_element">
+                    <button type="button" class="button_list_item"> Веб-сайти</button>
+                </li>
+                <li class="button_list_element">
+                    <button type="button" class="button_list_item"> Додатки</button>
+                </li>
+                <li class="button_list_element">
+                    <button type="button" class="button_list_item"> Дизайн</button>
+                </li>
+                <li class="button_list_element">
+                    <button type="button" class="button_list_item"> Маркетинг</button>
+                </li>
+            </ul>
 
-        <ul class="project-list">
-            <li class="project-list-element">
-                <a href="#">
-                <img class="project-list-img" src="images/technocrack.jpg" width="370" height="294" alt="Технокряк">
-                <div class="project-list-element-text">
-                <h3 class="project-list-title"> Технокряк </h3>
-                <p class="project-list-text"> Веб-сайт </p>
-                </div>
-                </a>
-            </li>
-            <li class="project-list-element">
-                <a href="#">
-                <img class="project-list-img" src="images/poster.jpg" width="370" height="294" alt="Постер-New-Orlean-vs-Golden-Star">
-                <div class="project-list-element-text">
-                <h3 class="project-list-title"> Постер New Orlean vs Golden Star </h3>
-                <p class="project-list-text"> Дизайн </p>
-                </div>
-                </a>
-            </li>
-            <li class="project-list-element">
-                <a href="#">
-                <img class="project-list-img" src="images/seafood.jpg" width="370" height="294" alt="Ресторан-Seafood">
-                <div class="project-list-element-text">
-                <h3 class="project-list-title"> Ресторан Seafood </h3>
-                <p class="project-list-text"> Додаток </p>
-                </div>
-                </a>
-            </li>
-            <li class="project-list-element">
-                <a href="#">
-                <img class="project-list-img" src="images/prime.jpg" width="370" height="294" alt="Проєкт-Prime">
-                <div class="project-list-element-text">
-                <h3 class="project-list-title"> Проєкт Prime </h3>
-                <p class="project-list-text"> Маркетинг </p>
-                </div>
-                </a>
-            </li>
-            <li class="project-list-element">
-                <a href="#">
-                <img class="project-list-img" src="images/boxes.jpg" width="370" height="294" alt="Проєкт-Boxes" >
-                <div class="project-list-element-text">
-                <h3 class="project-list-title"> Проєкт Boxes </h3>
-                <p class="project-list-text"> Додаток </p>
-                </div>
-                </a>
-            </li>
-            <li class="project-list-element">
-                <a href="#">
-                <img class="project-list-img" src="images/inspiration.jpg" width="370" height="294" alt="Inspiration-has-no-Borders">
-                <div class="project-list-element-text">
-                <h3 class="project-list-title"> Inspiration has no Borders </h3>
-                <p class="project-list-text"> Веб-сайт </p>
-                </div>
-                </a>
-            </li>
-            <li class="project-list-element">
-                <a href="#">
-                <img class="project-list-img" src="images/publishing.jpg" width="370" height="294" alt="Видання-Limited-Edition">
-                <div class="project-list-element-text">
-                <h3 class="project-list-title"> Видання Limited Edition </h3>
-                <p class="project-list-text"> Дизайн </p>
-                </div>
-                </a>
-            </li>
-            <li class="project-list-element">
-                <a href="#">
-                <img class="project-list-img" src="images/lab.jpg" width="370" height="294" alt="Проєкт-LAB">
-                <div class="project-list-element-text">
-                <h3 class="project-list-title"> Проєкт LAB </h3>
-                <p class="project-list-text"> Маркетинг </p>
-                </div>
-                </a>
-            </li>
-            <li class="project-list-element">
-                <a href="#">
-                <img class="project-list-img" src="images/growing.jpg" width="370" height="294" alt="Growing-Business">
-                <div class="project-list-element-text">
-                <h3 class="project-list-title"> Growing Business </h3>
-                <p class="project-list-text"> Додаток </p>
-                </div>
-                </a>
-            </li>
-        </ul>
+            <ul class="project-list">
+                <li class="project-list-element">
+                    <a href="#">
+                        <img class="project-list-img" src="images/technocrack.jpg" width="370" height="294"
+                             alt="Технокряк">
+                        <div class="project-list-element-text">
+                            <h3 class="project-list-title"> Технокряк </h3>
+                            <p class="project-list-text"> Веб-сайт </p>
+                        </div>
+                    </a>
+                </li>
+                <li class="project-list-element">
+                    <a href="#">
+                        <img class="project-list-img" src="images/poster.jpg" width="370" height="294"
+                             alt="Постер-New-Orlean-vs-Golden-Star">
+                        <div class="project-list-element-text">
+                            <h3 class="project-list-title"> Постер New Orlean vs Golden Star </h3>
+                            <p class="project-list-text"> Дизайн </p>
+                        </div>
+                    </a>
+                </li>
+                <li class="project-list-element">
+                    <a href="#">
+                        <img class="project-list-img" src="images/seafood.jpg" width="370" height="294"
+                             alt="Ресторан-Seafood">
+                        <div class="project-list-element-text">
+                            <h3 class="project-list-title"> Ресторан Seafood </h3>
+                            <p class="project-list-text"> Додаток </p>
+                        </div>
+                    </a>
+                </li>
+                <li class="project-list-element">
+                    <a href="#">
+                        <img class="project-list-img" src="images/prime.jpg" width="370" height="294"
+                             alt="Проєкт-Prime">
+                        <div class="project-list-element-text">
+                            <h3 class="project-list-title"> Проєкт Prime </h3>
+                            <p class="project-list-text"> Маркетинг </p>
+                        </div>
+                    </a>
+                </li>
+                <li class="project-list-element">
+                    <a href="#">
+                        <img class="project-list-img" src="images/boxes.jpg" width="370" height="294"
+                             alt="Проєкт-Boxes">
+                        <div class="project-list-element-text">
+                            <h3 class="project-list-title"> Проєкт Boxes </h3>
+                            <p class="project-list-text"> Додаток </p>
+                        </div>
+                    </a>
+                </li>
+                <li class="project-list-element">
+                    <a href="#">
+                        <img class="project-list-img" src="images/inspiration.jpg" width="370" height="294"
+                             alt="Inspiration-has-no-Borders">
+                        <div class="project-list-element-text">
+                            <h3 class="project-list-title"> Inspiration has no Borders </h3>
+                            <p class="project-list-text"> Веб-сайт </p>
+                        </div>
+                    </a>
+                </li>
+                <li class="project-list-element">
+                    <a href="#">
+                        <img class="project-list-img" src="images/publishing.jpg" width="370" height="294"
+                             alt="Видання-Limited-Edition">
+                        <div class="project-list-element-text">
+                            <h3 class="project-list-title"> Видання Limited Edition </h3>
+                            <p class="project-list-text"> Дизайн </p>
+                        </div>
+                    </a>
+                </li>
+                <li class="project-list-element">
+                    <a href="#">
+                        <img class="project-list-img" src="images/lab.jpg" width="370" height="294" alt="Проєкт-LAB">
+                        <div class="project-list-element-text">
+                            <h3 class="project-list-title"> Проєкт LAB </h3>
+                            <p class="project-list-text"> Маркетинг </p>
+                        </div>
+                    </a>
+                </li>
+                <li class="project-list-element">
+                    <a href="#">
+                        <img class="project-list-img" src="images/growing.jpg" width="370" height="294"
+                             alt="Growing-Business">
+                        <div class="project-list-element-text">
+                            <h3 class="project-list-title"> Growing Business </h3>
+                            <p class="project-list-text"> Додаток </p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
         </div>
     </section>
 </main>
 
 <footer class="footer">
     <div class="container">
-    <a href="index.html" class="footer-logo"> Web<span>Studio</span> </a>
-    <address>
-        <p class="address"> м. Київ, пр-т Лесі Українки, 26 </p>
-        <ul>
-            <li class="contact-info-footer"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="contact-info-footer"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-    </address>
+        <div class="footer-links-right">
+            <a href="index.html" class="footer-logo"> Web<span>Studio</span> </a>
+            <address>
+                <p class="address"> м. Київ, пр-т Лесі Українки, 26 </p>
+                <ul>
+                    <li class="contact-info-footer"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="contact-info-footer"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
+        <div class="footer-links-left">
+            <p class="footer-text-join"> Приєднуйтесь</p>
+            <ul class="footer-social-links">
+                <li>
+                    <a class="footer-social-links-icons" href="https://www.instagram.com" rel="nofollow">
+                        <svg width="20" height="20">
+                            <use href="./images/svg/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="footer-social-links-icons" href="https://www.instagram.com" rel="nofollow">
+                        <svg width="20" height="20">
+                            <use href="./images/svg/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="footer-social-links-icons" href="https://www.instagram.com" rel="nofollow">
+                        <svg width="20" height="20">
+                            <use href="./images/svg/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="footer-social-links-icons" href="https://www.instagram.com" rel="nofollow">
+                        <svg width="20" height="20">
+                            <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </footer>
 </body>
