--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
                 <li class="link-element">
                     <a href="index.html">Студія</a>
                 </li>
-                <li class="link-element">
+                <li class="link-element-active">
                     <a href='portfolio.html'> Портфоліо</a>
                 </li>
                 <li class="link-element">
@@ -73,8 +73,13 @@
             <ul class="project-list">
                 <li class="project-list-element">
                     <a href="#">
+                        <div class="project-list-container">
                         <img class="project-list-img" src="images/technocrack.jpg" width="370" height="294"
                              alt="Технокряк">
+                            <div class="project-list-container-text">
+                                <p class="text_portfolio">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
                         <div class="project-list-element-text">
                             <h3 class="project-list-title"> Технокряк </h3>
                             <p class="project-list-text"> Веб-сайт </p>
@@ -83,8 +88,13 @@
                 </li>
                 <li class="project-list-element">
                     <a href="#">
+                        <div class="project-list-container">
                         <img class="project-list-img" src="images/poster.jpg" width="370" height="294"
                              alt="Постер-New-Orlean-vs-Golden-Star">
+                            <div class="project-list-container-text">
+                                <p class="text_portfolio">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
                         <div class="project-list-element-text">
                             <h3 class="project-list-title"> Постер New Orlean vs Golden Star </h3>
                             <p class="project-list-text"> Дизайн </p>
@@ -93,8 +103,13 @@
                 </li>
                 <li class="project-list-element">
                     <a href="#">
+                        <div class="project-list-container">
                         <img class="project-list-img" src="images/seafood.jpg" width="370" height="294"
                              alt="Ресторан-Seafood">
+                            <div class="project-list-container-text">
+                                <p class="text_portfolio">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
                         <div class="project-list-element-text">
                             <h3 class="project-list-title"> Ресторан Seafood </h3>
                             <p class="project-list-text"> Додаток </p>
@@ -103,8 +118,13 @@
                 </li>
                 <li class="project-list-element">
                     <a href="#">
+                        <div class="project-list-container">
                         <img class="project-list-img" src="images/prime.jpg" width="370" height="294"
                              alt="Проєкт-Prime">
+                            <div class="project-list-container-text">
+                                <p class="text_portfolio">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
                         <div class="project-list-element-text">
                             <h3 class="project-list-title"> Проєкт Prime </h3>
                             <p class="project-list-text"> Маркетинг </p>
@@ -113,8 +133,13 @@
                 </li>
                 <li class="project-list-element">
                     <a href="#">
+                        <div class="project-list-container">
                         <img class="project-list-img" src="images/boxes.jpg" width="370" height="294"
                              alt="Проєкт-Boxes">
+                            <div class="project-list-container-text">
+                                <p class="text_portfolio">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
                         <div class="project-list-element-text">
                             <h3 class="project-list-title"> Проєкт Boxes </h3>
                             <p class="project-list-text"> Додаток </p>
@@ -123,8 +148,13 @@
                 </li>
                 <li class="project-list-element">
                     <a href="#">
+                        <div class="project-list-container">
                         <img class="project-list-img" src="images/inspiration.jpg" width="370" height="294"
                              alt="Inspiration-has-no-Borders">
+                            <div class="project-list-container-text">
+                                <p class="text_portfolio">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
                         <div class="project-list-element-text">
                             <h3 class="project-list-title"> Inspiration has no Borders </h3>
                             <p class="project-list-text"> Веб-сайт </p>
@@ -133,8 +163,13 @@
                 </li>
                 <li class="project-list-element">
                     <a href="#">
+                        <div class="project-list-container">
                         <img class="project-list-img" src="images/publishing.jpg" width="370" height="294"
                              alt="Видання-Limited-Edition">
+                            <div class="project-list-container-text">
+                                <p class="text_portfolio">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
                         <div class="project-list-element-text">
                             <h3 class="project-list-title"> Видання Limited Edition </h3>
                             <p class="project-list-text"> Дизайн </p>
@@ -143,7 +178,12 @@
                 </li>
                 <li class="project-list-element">
                     <a href="#">
+                        <div class="project-list-container">
                         <img class="project-list-img" src="images/lab.jpg" width="370" height="294" alt="Проєкт-LAB">
+                            <div class="project-list-container-text">
+                                <p class="text_portfolio">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
                         <div class="project-list-element-text">
                             <h3 class="project-list-title"> Проєкт LAB </h3>
                             <p class="project-list-text"> Маркетинг </p>
@@ -152,8 +192,13 @@
                 </li>
                 <li class="project-list-element">
                     <a href="#">
+                        <div class="project-list-container">
                         <img class="project-list-img" src="images/growing.jpg" width="370" height="294"
                              alt="Growing-Business">
+                            <div class="project-list-container-text">
+                                <p class="text_portfolio">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
                         <div class="project-list-element-text">
                             <h3 class="project-list-title"> Growing Business </h3>
                             <p class="project-list-text"> Додаток </p>
