make some changes

--- a/index.html
+++ b/index.html
@@ -108,21 +108,21 @@
                     <img class="work-list-img" src="images/whatwedo1.png" width="370" height="294"
                          alt="Десктопні-додатки">
                     <div class="work-list-text">
-                        Десктопні додатки
+                        <p>Десктопні додатки</p>
                     </div>
                 </li>
                 <li class="work-list-element">
                     <img class="work-list-img" src="images/whatwedo2.png" width="370" height="294"
                          alt="Мобільні-додатки">
                     <div class="work-list-text">
-                        Мобільні додатки
+                        <p>Мобільні додатки</p>
                     </div>
                 </li>
                 <li class="work-list-element">
                     <img class="work-list-img" src="images/whatwedo3.png" width="370" height="294"
                          alt="Дизайнерські-рішення">
                     <div class="work-list-text">
-                        Дизайнерські рішення
+                       <p>Дизайнерські рішення</p>
                     </div>
                 </li>
             </ul>
