--- a/index.html
+++ b/index.html
@@ -334,6 +334,82 @@
         </div>
     </section>
 </main>
+
+
+<!--<footer class="footer">-->
+<!--    <div class="container">-->
+<!--        <div class="footer-address">-->
+<!--            <a href="index.html" class="logo-footer">Web<span>Studio</span></a>-->
+<!--            <address>-->
+<!--                <ul class="footer-contact-list">-->
+<!--                    <li class="contact-footer"><a class="city"-->
+<!--                                                  href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv?entry=ttu"-->
+<!--                                                  target="_blank" rel="noreferrer noopener"> м. Київ, пр-т Лесі-->
+<!--                        Українки,-->
+<!--                        26</a>-->
+<!--                    </li>-->
+<!--                    <li class="contact-footer"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>-->
+<!--                    <li class="contact-footer"><a href="tel:+380961111111">+38 096 111 11 11</a></li>-->
+<!--                </ul>-->
+<!--            </address>-->
+<!--        </div>-->
+
+<!--        <div class="footer-links">-->
+<!--            <p class="footer-title"> Приєднуйтесь</p>-->
+<!--            <ul class="footer-social-links">-->
+<!--                <li>-->
+<!--                    <a class="footer-social-links-icons" href="https://www.instagram.com" rel="nofollow">-->
+<!--                        <svg width="20" height="20">-->
+<!--                            <use href="./images/svg/icons.svg#icon-instagram"> </use>-->
+<!--                        </svg>-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <a class="footer-social-links-icons" href="https://www.instagram.com" rel="nofollow">-->
+<!--                        <svg width="20" height="20">-->
+<!--                            <use href="./images/svg/icons.svg#icon-twitter"> </use>-->
+<!--                        </svg>-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <a class="footer-social-links-icons" href="https://www.instagram.com" rel="nofollow">-->
+<!--                        <svg width="20" height="20">-->
+<!--                            <use href="./images/svg/icons.svg#icon-facebook"> </use>-->
+<!--                        </svg>-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <a class="footer-social-links-icons" href="https://www.instagram.com" rel="nofollow">-->
+<!--                        <svg width="20" height="20">-->
+<!--                            <use href="./images/svg/icons.svg#icon-linkedin"> </use>-->
+<!--                        </svg>-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </div>-->
+<!--        <div class="join">-->
+<!--            <p class="footer-title">Підпишіться на розсилку</p>-->
+<!--            <form class="footer_box_second_plus_one">-->
+<!--                <input type="email" class="footer_input" required placeholder="E-mail">-->
+<!--                <button type="submit" class="footer_button">-->
+<!--                    Підписатися-->
+<!--                    <svg class="footer_button_svg" width="24" height="24">-->
+<!--                        <use href="./images/svg/icons.svg#icon-send"></use>-->
+<!--                    </svg>-->
+<!--                </button>-->
+<!--            </form>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</footer>-->
+
+
+
+
+
+
+
+
+
 <footer class="footer">
     <div class="container">
         <div class="footer-links-right">
@@ -347,7 +423,7 @@
         </address>
        </div>
     <div class="footer-links-left">
-        <p class="footer-text-join"> Приєднуйтесь</p>
+        <p class="footer-text"> Приєднуйтесь</p>
     <ul class="footer-social-links">
         <li>
             <a class="footer-social-links-icons" href="https://www.instagram.com" rel="nofollow">
@@ -379,12 +455,69 @@
         </li>
     </ul>
     </div>
+        <div class="join">
+            <p class="footer-text">Підпишіться на розсилку</p>
+            <form class="footer_box_second_plus_one">
+                <label> <span class="visually-hidden">Email</span>
+                    <input type="email" class="footer_input" required placeholder="E-mail">
+                </label>
+                <button type="submit" class="footer_button">
+                    Підписатися
+                    <svg class="footer_button_svg" width="24" height="24">
+                        <use href="./images/svg/icons.svg#icon-send"></use>
+                    </svg>
+                </button>
+            </form>
+        </div>
     </div>
 </footer>
-<div class="backdrop is-hidden" data-modal >
-    <div class="modal">
-        <button type="button" class="modal_button" data-modal-close> <svg class="modal_icon">
-            <use href="./images/svg/icons.svg#icon-close"></use></svg></button>
+
+<div class="backdrop is-hidden" data-modal>
+    <div class="modal-window">
+        <button type="button" class="close-modal-button" data-modal-close>
+            <svg class="icon-modal">
+                <use href="./images/svg/icons.svg#icon-close"></use>
+            </svg>
+        </button>
+        <h2 class="form_title">Залиште свої дані, ми вам передзвонимо</h2>
+        <form class="form">
+            <label class="form-label">
+                <span class="label-text">Ім'я</span>
+                <input type="text" class="form-input" required>
+                <svg class="form-icon" fill="currentColor" width="18" height="18">
+                    <use href="./images/svg/icons.svg#icon-person-mod"></use>
+                </svg>
+            </label>
+            <label class="form-label">
+                <span class="label-text">Телефон</span>
+                <input type="text" class="form-input" required>
+                <svg class="form-icon" fill="currentColor" width="18" height="18">
+                    <use href="./images/svg/icons.svg#icon-phone-mod"></use>
+                </svg>
+            </label>
+            <label class="form-label">
+                <span class="label-text">Пошта</span>
+                <input type="email" class="form-input" required>
+                <svg class="form-icon" fill="currentColor" width="18" height="18">
+                    <use href="./images/svg/icons.svg#icon-mail-mod"></use>
+                </svg>
+            </label>
+            <label class="form-label">
+                <span class="label-text">Коментар</span>
+                <textarea name="" id="" class="form_textarea"  cols="30" rows="10" required placeholder="Введіть текст"></textarea>
+            </label>
+            <div class="checkbox-div">
+                <input type="checkbox" id="checkbox" name="checkbox">
+                <label for="checkbox" class="label_license">
+                            <span>
+                                Погоджуюся з розсилкою та приймаю <a href="#" class="form-a">Умови договору</a>
+                            </span>
+                </label>
+            </div>
+            <div class="button-form-div">
+                <button type="submit" class="form-button">Відправити</button>
+            </div>
+        </form>
     </div>
 </div>
 <script src="./js/modal.js"></script>
