--- a/portfolio.html
+++ b/portfolio.html
@@ -258,7 +258,7 @@
         <div class="join">
             <p class="footer-text">Підпишіться на розсилку</p>
             <form class="footer_box_second_plus_one">
-                <label> <span class="visually-hidden">Email</span>
+                <label class="footer-label-input"> <span class="visually-hidden">Email</span>
                     <input type="email" class="footer_input" required placeholder="E-mail">
                 </label>
                 <button type="submit" class="footer_button">
